crates/keron-lang/tests/corpus/errors/parse/chain_outside_reconcile.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unexpected `>`, expected expression
  --> 3:12
  |
3 | val c = a -> b
  |            ^
  = help: write an expression (literal, name, call, or `(…)`).
